# django-cookiecutter

./: .gitignore  .pre-commit-config.yaml  .pyup.yaml  .pyup.yml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  LICENSE.rst  README.md  README.rst  cookiecutter.json  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: .git-commit-template.txt
.github/ISSUE_TEMPLATE/: bug-report.md  chore.md  documentation-request.md  feature-request.md
.github/workflows/: semantic_release.yaml  test_contribution.yaml
config/requirements/: base.txt  local.txt  production.txt  test.txt
docs/: requirements.txt
docs/source/: code-of-conduct.rst  conf.py  index.rst
docs/source/discussion/: index-discussion.rst  (+2 more)
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_django.py  test_fake.py  test_helper.py
{{cookiecutter.git_project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  .pyup.yaml  .pyup.yml  Dockerfile  LICENSE.rst  README.rst  conftest.py  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  tox.ini  version.toml
{{cookiecutter.git_project_name}}/.env/: .local  .production  .staging  .testing
{{cookiecutter.git_project_name}}/.github/: ISSUE_TEMPLATE.md  semantic.yaml
{{cookiecutter.git_project_name}}/compose/: docker-compose-swarm.yml
{{cookiecutter.git_project_name}}/core/: __init__.py  asgi.py  urls.py  wsgi.py
{{cookiecutter.git_project_name}}/docs/: __init__.py  requirements.txt
{{cookiecutter.git_project_name}}/templates/: base.html
(+116 files in other folders)
