[project]
authors = [{ name = "Mark Sevelj", email = "mark.sevelj@dunwright.com.au" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = ["Django>=4.0"]
description = "A Django Cookiecutter"
dynamic = ["version"]
keywords = ["Django Cookiecutter", "Django", "django"]
license = { file = "LICENSE" }
maintainers = [{ name = "Mark Sevelj", email = "mark.sevelj@dunwright.com.au" }]
name = "django-cookiecutter"
readme = "README.rst"
requires-python = ">=3.10,<3.12"
