[metadata]
description-file = README.rst

[semantic_release]
branch =  main
version_variable = README.rst:Version,setup.py:__version__,docs/source/conf.py:__version__

major_on_zero = false
upload_to_pypi = false
check_build_status = false

commit_subject = build(version): Bump to version - {version}.
